--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,66 @@ body {
     background-repeat: no-repeat;
     background-color: #121214;
 }
-main *{
-    border: 1px solid green;
+
+body * {
+    font-family: 'inter', sans-serif;
+    line-height: 160%;
 }
+
 main {
     max-width: 580%;
     width: 90%;
     margin: auto;
+
+    display: grid;
+    gap: 24px;
+    margin-top: 32px;
+}
+
+section {
+    color: whitesmoke;
+    border: 1px solid;
+    padding-top: 4px;
+    border-radius: 10px;
+    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+  
+}
+
+section div {
+    background: #2A2634;
+    padding: 32px;
+    padding: 24px;
+    border-radius: 8px;
+}
+
+section h2 {
+    letter-spacing: -0.47px;
+
+}
+
+section p {
+    letter-spacing: -0.18px;    
+    color: #A1A1AA;
+
+}
+
+section ul {
+    display: flex;
+    gap: 16px;
+    margin-top: 24px;
+    flex-wrap: wrap;
+
+}
+.games-list img{
+    width: 90px;
+    border-radius: 8px;
+}
+
+.canais-list img {
+    border-radius: 50%;
+    width: 70%;
+}
+
+.social-list img{   
+    width: 20%;
 }
