--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,21 @@ header div a{
     animation-delay: 1s;
 }
 main section {
-    animation: fromBottom .7s;
+    animation: fromBottom .7s backwards;
 }
+
+main section:nth-child(1) {
+    animation-delay: 0;
+}
+
+main section:nth-child(2) {
+    animation-delay: .2s;
+}
+
+main section:nth-child(3) {
+    animation-delay: .4s;
+}
+
 @keyframes fromtop {
     from {
         opacity:0;
